--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
     body {
       flex-direction: row-reverse; } }
 
-button {
+[data-simon] {
   display: block;
   display: flex;
   flex-grow: 0;
@@ -22,23 +22,23 @@ button {
   opacity: 0.9;
   transition: opacity 150ms ease-in; }
   @media (min-width: 600px) {
-    button {
+    [data-simon] {
       height: 100vh; } }
 
-button[data-index="1"] {
+[data-simon="1"] {
   background: #F0C63E; }
-  button[data-index="1"].active {
+  [data-simon="1"].active {
     background: #7F360C; }
 
-button[data-index="2"] {
+[data-simon="2"] {
   background: #D85899; }
-  button[data-index="2"].active {
+  [data-simon="2"].active {
     background: #7F0069; }
 
-button[data-index="3"] {
+[data-simon="3"] {
   background: #68FFFD; }
-  button[data-index="3"].active {
-    background: #3FCCCB; }
+  [data-simon="3"].active {
+    background: #238282; }
 
 .score {
   position: fixed;
@@ -74,6 +74,7 @@ button[data-index="3"] {
   position: absolute;
   z-index: 30;
   top: 101vh;
+  width: 2000px;
   left: 0;
   pointer-events: none;
   padding: 1vh 2vh;
@@ -90,17 +91,18 @@ button[data-index="3"] {
     position: relative;
     width: auto;
     padding-right: 10px; }
-  .hiscores .name:after {
-    content: ":";
+  .hiscores .name:before {
+    content: ".";
     position: absolute;
-    right: -10px; }
+    left: -30px; }
   .hiscores .time {
     font-size: 4vh;
     clear: left;
     line-height: 4vh; }
 
 .hiscores {
-  animation: sscroll 12s infinite cubic-bezier(0.02, 0.56, 0.3, 0.91), fadeeeer 4s 9s infinite ease-out; }
+  animation: sscroll 12s infinite cubic-bezier(0.02, 0.56, 0.3, 0.91), fadeeeer 12s linear infinite;
+  animation-fill-mode: forwards; }
 
 @keyframes sscroll {
   from {
@@ -114,4 +116,42 @@ button[data-index="3"] {
   80% {
     opactiy: 1; }
   100% {
-    opacity: 0.4; } }
+    opacity: 0; } }
+
+.name-form {
+  position: fixed;
+  background: rgba(255, 192, 203, 0.9);
+  width: 100vw;
+  height: 100vh;
+  z-index: 90;
+  padding: 6vh 12vw;
+  box-sizing: border-box; }
+  .name-form input {
+    max-width: 100%;
+    background: none;
+    border: 0;
+    border-bottom: 4px solid #ff5a77;
+    box-shadow: none;
+    font-size: 18vw;
+    line-height: 24vw;
+    height: 24vw;
+    padding: 0 0 0 2vw;
+    outline: none; }
+    .name-form input:focus {
+      border-bottom: 4px solid #f3002a; }
+  .name-form__title {
+    color: #003f34;
+    font: 900 5vh/5vh sans-serif;
+    display: block;
+    height: 5vh; }
+  .name-form button {
+    float: none;
+    background: #003f34;
+    color: pink;
+    width: 100%;
+    height: 12vh;
+    border: none;
+    box-shadow: 0;
+    text-align: center;
+    font-size: 7vh;
+    margin: 2vh 0; }
